PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
? ? ??? 200?, Version 4.4.0
- Added imagefilter() function which allows application of various filters.
  This function is only available with bundled GD. (Pierre-Alain Joye, Ilia)

? ? ??? 2002, Version 4.3.0
- ATTENTION! "make install" will *by default* install the CLI SAPI binary in 
  {PREFIX}/bin/php. If you don't disable the CGI binary, it will be
  installed as {PREFIX}/bin/php-cgi.
- Removed extensions: (Jan, Jani)
  . ext/aspell
  . ext/ccvs
  . ext/cybercash
  . ext/icap
  . sapi/fhttpd
- Moved extensions to PECL (http://pear.php.net/): (James, Derick)
  . ext/vpopmail
  . ext/cybermut
- Added "neutral" language entry to mbstring spec. (Moriyoshi) 
- Modified log() to accept multiple bases. (Jason)
- Added gd_info() which returns an array of gd support information. (Marcus)
- Implemented features/changes requested in Bug #16960 (Timm):
  . Added a new function sybase_unbuffered_query()
  . Added a new function sybase_fetch_assoc()
  . Added sybase_set_message_handler() which enables users to handle
    server messages in a callback function
  . Added an ini entry for deadlock retries - retrying deadlocks can cause 
    transaction state to break (sybct.deadlock_retry_count,
    defaults to -1 "forever").
  . Fixed sybase_fetch_object() not to return objects with numeric members
  . Fixed issues with identical fieldnames
  . Made sybase_fetch_*() functions return correct datatypes
  . Made phpinfo() section more verbose
  . Made sybase_query() error messages more verbose
- Fixed bug #19935 (made OpenSSL file system operations abide by safe_mode
  & open_basedir restrictions). (Ilia)
- Fixed bug #18868 (improved the check for availability of realpath()). (Ilia)
- Fixed width/height detection of bmp images using getimagesize() function on